@@ -1,18 +1,24 @@
 package de.fh_bielefeld.geograph.API;
 
-import java.io.IOException;
+import java.io.File;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.text.DecimalFormat;
-import java.text.DecimalFormatSymbols;
-import java.util.Locale;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.transform.Result;
+import javax.xml.transform.Source;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
 
 import org.w3c.dom.Document;
-import org.xml.sax.SAXException;
+
+import de.fh_bielefeld.geograph.API.APIRequest.RequestType;
+import de.fh_bielefeld.geograph.API.APIRequest.ResponseType;
+import de.fh_bielefeld.geograph.API.Exception.InvalidAPIRequestException;
 
 /**
 * The API Wrapper Class for the OpenStreetMap API
@@ -23,71 +29,44 @@ import org.xml.sax.SAXException;
 * @since   2017-05-25 
 */
 public class OSMApi {
-
-    /**
-     * The URL of the OSM API
-     */
-    public static final String api_uri = "http://www.openstreetmap.org";
-    
-    /**
-     * URLs for the different Calls to the API
-     */
-    public static enum CALLS {
-        /**
-         * The Capability Call URL
-         */
-        Capabilities("/api/capabilities"),
-        /**
-         * The BoundingBox Call URL(Example: GET /api/0.6/map?bbox=left,down,right,up)
-         */
-        BoundingBoxMap("/api/0.6/map?bbox="),
-        /**
-         * The Permission Call URL
-         */
-        Permissions("/api/0.6/permissions"),
-        /**
-         * The Node Call URL(Example: GET /api/0.6/node/nodeid)
-         */
-        Node("/api/0.6/node/"),
-        /**
-         * The Way Call URL(Example: GET /api/0.6/[way|relation]/#id/full)
-         */
-        Way("/api/0.6/way/")
-        ;
-
-        private final String call_uri;
-
-        /**
-         * Constructor of the Call-URL-Enum
-         * @param call_uri String representation of the Call URL
-         */
-
-        private CALLS(final String call_uri) {
-            this.call_uri = call_uri;
-        }
-
-        @Override
-        public String toString() {
-            return call_uri;
-        }
-    }
-    
+  
     /**
      * Method to get the data of a single node by id
      * 
      * @param nodeId The ID of the Node you want to get additional information about
      * @return Document A XML Document with the data the API request returned for the given node
      * @throws ParserConfigurationException If the answer is not a valid XML document or the parser factory cannot be initialized correctly
-     * @throws IOException If there is a problem with the HTTP Connection or with the parser
-     * @throws SAXException If there is a problem while parsing the returned OSM file
+     * @throws InvalidAPIRequestException If the request failed or the given Arguments do not match the API documentation
      */
-    public static Document getNodeWithID(long nodeId) 
-            throws ParserConfigurationException, IOException, SAXException{
-
+    public static Document getNodeWithID(long nodeId) throws InvalidAPIRequestException {
         
-        String connectionString = api_uri + CALLS.Node + nodeId;
+        APIRequestBuilder builder = new APIRequestBuilder();
         
-        return requestXML(connectionString);
+        APIRequest request = builder.server("http://www.openstreetmap.org")
+                .call("/api/0.6/node/")
+                .callType(RequestType.NODE_BY_ID)
+                .argument(String.valueOf(nodeId))
+                .build();
+        
+        if(request.ready()){
+            request = sendRequest(request);
+            if(request.getResponseType() == ResponseType.SUCCESS){
+                return request.getResponse();
+            }else{//If response type is error switch to other api
+                request = builder.server("http://overpass-api.de")
+                    .call("/api/node/")
+                    .build();
+                if(request.ready()){
+                    request = sendRequest(request);
+                    if(request.getResponseType() == ResponseType.SUCCESS){
+                        return request.getResponse();
+                    }//If response type is again error throw exception(let the user handle it)
+                    throw new InvalidAPIRequestException("Invalid Request(Maybe the ID is wrong ?)");
+                }
+                
+            }
+        }
+        throw new InvalidAPIRequestException("Invalid Request(Maybe the ID is wrong ?)");
     }
     
 
@@ -99,13 +78,15 @@ public class OSMApi {
      * @param longitude A geographic coordinate that specifies the east-west position of a point on the Earth's surface.
      * @param range The Range(eg. size of the bounding box) within 0 and 0.25
      * @return The XML Document returned by the API with information within the calculated bounding box
-     * @throws ParserConfigurationException If the answer is not a valid XML document or the parser factory cannot be initialized correctly
-     * @throws IOException If there is a problem with the HTTP Connection or with the parser
-     * @throws SAXException If there is a problem while parsing the returned OSM file
+     * @throws InvalidAPIRequestException If the request failed or the given Arguments do not match the API documentation
      */
     public static Document getBoundingBoxOfRange(double latitude, double longitude, double range) 
-            throws IOException, ParserConfigurationException, SAXException{
-        return getBoundingBoxLatLong(latitude-range, longitude-range, latitude+range, latitude+range);
+            throws InvalidAPIRequestException{
+        
+        if(!(range <= 0.25 && range > 0))
+            throw new InvalidAPIRequestException("Range is out of Range ( not between 0 and 0.25");
+        
+        return getBoundingBoxLatLong(latitude-(range/2), longitude-(range/2), latitude+(range/2), longitude+(range/2));
     }
 
     /**
@@ -116,46 +97,84 @@ public class OSMApi {
      * @param maxLatitude A geographic coordinate that specifies the north–south position of a point on the Earth's surface for the upper point
      * @param maxLongitude A geographic coordinate that specifies the east-west position of a point on the Earth's surface for the upper Point
      * @return The XML Document returned by the API with information within the bounding box
-     * @throws ParserConfigurationException If the answer is not a valid XML document or the parser factory cannot be initialized correctly
-     * @throws IOException If there is a problem with the HTTP Connection or with the parser
-     * @throws SAXException If there is a problem while parsing the returned OSM file
+     * @throws InvalidAPIRequestException If the request failed or the given Arguments do not match the API documentation
      */
     public static Document getBoundingBoxLatLong(double minLatitude, double minLongitude, double maxLatitude, double maxLongitude) 
-            throws IOException, ParserConfigurationException, SAXException{
-
-
-        DecimalFormat format = new DecimalFormat("##0.0000000", DecimalFormatSymbols.getInstance(Locale.ENGLISH));
-
-        String left = format.format(minLongitude);
-        String down = format.format(minLatitude);
-        String right = format.format(maxLongitude);
-        String up = format.format(maxLatitude);
-
-        String connectionString = api_uri + CALLS.BoundingBoxMap +
-                left  + "," +
-                down  + "," +
-                right + "," +
-                up;
-        return requestXML(connectionString);
+            throws InvalidAPIRequestException{
+        
+        if(!((minLatitude <= 90 && minLatitude >= -90) && (maxLatitude <= 90 && maxLatitude >= -90)))
+            throw new InvalidAPIRequestException("Latitude is out of Range ( not between -90 and 90)");
+        if(!((minLongitude <= 180 && minLongitude >= -180) && (maxLongitude <= 180 && maxLongitude >= -180)))
+            throw new InvalidAPIRequestException("Longitude is out of Range ( not between -180 and 180)");
+        if((minLatitude == maxLatitude)||(minLongitude == maxLongitude))
+            throw new InvalidAPIRequestException("BoundingBox size would be zero");
+        
+        APIRequestBuilder builder = new APIRequestBuilder();
+        
+        APIRequest request = builder.server("http://www.openstreetmap.org")
+                .call("/api/0.6/map?bbox=")
+                .callType(RequestType.BOUNDING_BOX_LATLANG)
+                .argument(String.valueOf(minLatitude))
+                .argument(String.valueOf(minLongitude))
+                .argument(String.valueOf(maxLatitude))
+                .argument(String.valueOf(maxLongitude))
+                .build();
+        
+        if(request.ready()){
+            request = sendRequest(request);
+            if(request.getResponseType() == ResponseType.SUCCESS){
+                return request.getResponse();
+            }else{//If response type is error switch to other api
+                request = builder.server("http://overpass-api.de")
+                    .call("/api/map?bbox=")
+                    .build();
+                if(request.ready()){
+                    request = sendRequest(request);
+                    if(request.getResponseType() == ResponseType.SUCCESS){
+                        return request.getResponse();
+                    }//If response type is again error throw exception(let the user handle it)
+                    throw new InvalidAPIRequestException("Invalid Request(Maybe the Range is to big?)");
+                }
+                
+            }
+        }
+        
+        throw new InvalidAPIRequestException("Invalid Request(Maybe the Range is to big?)");
     }
 
     /**
      * The Method to send a request and parse the returned OSM File
      * 
-     * @param url The API URL which the Method has to request
-     * @return The parsed XML Document
-     * @throws ParserConfigurationException If the answer is not a valid XML document or the parser factory cannot be initialized correctly
-     * @throws IOException If there is a problem with the HTTP Connection or with the parser
-     * @throws SAXException If there is a problem while parsing the returned OSM file
+     * @param request The APIRequest Object representation
+     * @return The APIRequest filled with ResponseType and Response
      */
-    private static Document requestXML(final String url) 
-            throws ParserConfigurationException, IOException, SAXException{
-        URL apiURL = new URL(url);
-        HttpURLConnection connection = (HttpURLConnection) apiURL.openConnection();
+    private static APIRequest sendRequest(APIRequest request) {
+        URL apiURL;
+        try {
+            apiURL = new URL(request.toURL());
+        
+            HttpURLConnection connection = (HttpURLConnection) apiURL.openConnection();
 
-        DocumentBuilderFactory dbfac = DocumentBuilderFactory.newInstance();
-        DocumentBuilder docBuilder = dbfac.newDocumentBuilder();
+            DocumentBuilderFactory dbfac = DocumentBuilderFactory.newInstance();
+            DocumentBuilder docBuilder = dbfac.newDocumentBuilder();
 
-        return docBuilder.parse(connection.getInputStream());
+            request.setResponse(docBuilder.parse(connection.getInputStream()));
+            request.setResponseType(ResponseType.SUCCESS);
+            
+            //If the request was successful save the answer as file
+            Transformer transformer = TransformerFactory.newInstance().newTransformer();
+            Result output = new StreamResult(new File(request.getRequestType().toString()+
+                    "--" +
+                    System.currentTimeMillis() +
+                    "--response.osm"));
+            Source input = new DOMSource(request.getResponse());
+
+            transformer.transform(input, output);
+            
+        } catch (Exception e) {
+            request.setResponseType(ResponseType.ERROR);
+        }
+        
+        return request;
     }
 }
